responsive correction tablets

--- a/src/components/common/footer/Footer.module.scss
+++ b/src/components/common/footer/Footer.module.scss
@@ -33,7 +33,7 @@
     h3 {
         font-weight: 100;
         text-transform: uppercase;
-        font-size: 1.8;
+        // font-size: 1.8rem;
         letter-spacing: 6px;
     }
 
